--- a/ppt.ipynb
+++ b/ppt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,9 +22,9 @@
     "\n",
     "opciones = {1:\"Papel\", 2:\"Piedra\", 3:\"Tijera\"}\n",
     "\n",
-    "print(\"vamos a jugar a Papel-Piedra-Tijera\")\n",
+    "print(\"Vamos a jugar a Papel-Piedra-Tijera\")\n",
     "print(f\"opciones: {opciones}\")\n",
-    "opcion_elegida = int(input(f\"elige una opcion: \"))\n",
+    "opcion_elegida = int(input(\"Elige una opcion: \"))\n",
     "\n",
     "opciones_keys = list(opciones.keys())\n",
     "\n",
